--- a/acmart-sigplanproc-template.tex
+++ b/acmart-sigplanproc-template.tex
@@ -227,9 +227,17 @@ Since the CodeQL for Visual Studio Code extension is open source, we created a f
 \newline
 \indent CodeQLVis is provided as supplemental functionality to the base CodeQL VS Code extension's default way of rendering the results in tabular view. Users select which functionality they would like to employ with simple context-menu options. Further implementation details follow.
 
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
-  \includegraphics[width=\linewidth]{work_flow}
+  \begin{tikzpicture}[node distance = 3cm,on grid,auto,align=center, minimum size=6cm]
+    \node[state] (a) {Interpretation \\and \\Compilation \\of Queries};
+    \node[state] (b) [right = of a, xshift=0.2cm] {Parsing and \\Combining \\Responses to \\Visualize};
+    \node[state] (c) [right = of b] {The \\Visualization!};
+    \path[->]
+    (a) edge (b)
+    (b) edge (c)
+    ;
+  \end{tikzpicture}
   \caption{The work flow}
 \end{figure}
 
@@ -278,12 +286,12 @@ Our approach is to make multiple CodeQL queries derived from the original query 
   \caption{Query diagram}
   \label{queries}
 \end{figure}
-This figure represents an example where taint flows from the source $s_1$ to the sink $t_1$, but taint flow from the source $s_2$ is blocked by $v$ before it reaches the sink $t_2$. The dotted box around $s_1,t_1$ represents our first query. The dashed box around $s_2,v,t_2$ represents our second query. The dot-dashed box around $s_2,v$ represents our third query. These queries gives us the information for where taint has reached sinks, where it could have reached a sink if it had not been sanitized (by $v$), and where the taint was sanitized.
+ Figure \ref{queries} represents an example where taint flows from the source $s_1$ to the sink $t_1$, but taint flow from the source $s_2$ is blocked by $v$ before it reaches the sink $t_2$. The dotted box around $s_1,t_1$ represents our first query. The dashed box around $s_2,v,t_2$ represents our second query. The dot-dashed box around $s_2,v$ represents our third query. These queries gives us the information for where taint has reached sinks, where it could have reached a sink if it had not been sanitized (by $v$), and where the taint was sanitized.
 
 \subsection{Queries to Graphs}
 Once we have obtained information from our queries we can construct a graph that represents how taint flows. In the future, this graph can be adapted to various styles of visualization - the same underlying graph can be used to render different visualizations.
 \newline
-\indent To construct our graph we first add all of the results from our original query. This represents when taint has flown from sources to sinks. If our modified queries have been made (i.e. the original query had a sanitizer method) we use our second query to find all paths from sources to sinks where taint could have flown undisrupted if not for our sanitization. Finally, we use our third query to determine paths from sources to sanitizing nodes where taint has been blocked. This tells us how far taint flows on the paths provided by our second query. Combining the results from each of our queries we get a graph that has all paths where taint flows from sources to sinks, and all paths where taint would have flowed if not for sanitization, including how far the taint does flow. Of course, we combine nodes referencing the same locations in code so we may accurately depict cases such as when a source acts as a source of taint for distinct sources.
+\indent To construct our graph we first add all of the results from our original query. This represents when taint has flown from sources to sinks. If our modified queries have been made (i.e. the original query had a sanitizer method) we use our second query to find all paths from sources to sinks where taint could have flown undisrupted if not for our sanitization. Finally, we use our third query to determine paths from sources to sanitizing nodes where taint has been blocked. This tells us how far taint flows on the paths provided by our second query. Combining the results from each of our queries we get a graph that has all paths where taint flows from sources to sinks, and all paths where taint would have flowed if not for sanitization, including how far the taint does flow. Of course, we combine nodes referencing the same locations in code so we may accurately depict cases such as when a source acts as a source of taint for distinct sinks.
 
 \subsection{Rendering Results}
 The rendering part of the visualization tool is running on the Webview infrastructure of VS Code. The React.js framework is used to build the front-end of CodeQLVis. The TypeScript library hediet/visualization is used as the rendering infrastructure for the graphs. Websocket infrastructure enables the back-end to send analysis results to the front-end for rendering.
