Minor formatting fix

--- a/acmart-sigplanproc-template.tex
+++ b/acmart-sigplanproc-template.tex
@@ -305,7 +305,7 @@ Due to the nature of this project, we only examined whether CodeQLVis generates 
 \newline
 \textbf{5.1. Are the roles of nodes on taint-flow graphs correctly labeled? }
 \newline
-Nodes on the visualization graphs have their roles - \textbf{Source, Sink, Sanitizer, Tainted Variable and Untainted Variable}. CodeQLVis should not label any node in an incorrect role.
+Nodes on the visualization graphs have their roles - \textit{Source, Sink, Sanitizer, Tainted Variable and Untainted Variable}. CodeQLVis should not label any node in an incorrect role.
 \newline
 \newline
 \textbf{5.2. Are there any missing taint-flow paths? }
