--- a/codeql-vis-refs.bib
+++ b/codeql-vis-refs.bib
@@ -67,3 +67,11 @@ title = {CodeQL for research},
 url = {https://securitylab.github.com/tools/codeql},
 lastaccessed = {December 6, 2020}
 }
+
+@online{CodeSonar,
+author = {GrammaTech},
+year = {2020},
+title = {Static Analysis with CodeSonar},
+url = {https://www.grammatech.com/products/source-code-analysis},
+lastaccessed = {December 7, 2020}
+}
